@@ -22,6 +22,7 @@ Misc:
  - Qt: Simplify OpenGL context creation
  - Debugger: Support register and memory writes via GDB stub
  - GBA Audio: Force audio DMAs to not increment destination
+ - Qt: Thread startup improvements
 
 0.4.1: (2016-07-11)
 Bugfixes:
